fixed a gap analyzer

--- a/client/src/styles/GapAnalyzer.css
+++ b/client/src/styles/GapAnalyzer.css
@@ -1,4 +1,4 @@
-.image-wrapper-color img {
+.number-wrapper-color img {
     height: 20px;
 }
 
